--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,4 +95,30 @@ if(APPLE)
 endif()
 
 
+#PLATFORM=PLATFORM_WEB make
+# Web Configurations
+# if (${PLATFORM} STREQUAL "Web")
+#     # Tell Emscripten to build an example.html file.
+#     set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".html")
+
+#     # Required linker flags for using Raylib with Emscripten
+#     target_link_options(${PROJECT_NAME} PRIVATE -sEXPORTED_FUNCTIONS=['_main','_malloc'] -sEXPORTED_RUNTIME_METHODS=ccall -sUSE_GLFW=3)
+# endif()
+
+if (${PLATFORM} STREQUAL "Web")
+    # Add this flag to the linker flags when targeting Web
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -sASYNCIFY")
+
+    # Tell Emscripten to build a .html output
+    set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".html")
+
+    # Required linker flags for using Raylib with Emscripten
+    target_link_options(${PROJECT_NAME} PRIVATE
+        "-sEXPORTED_FUNCTIONS=['_main','_malloc']"
+        "-sEXPORTED_RUNTIME_METHODS=ccall"
+        "-sUSE_GLFW=3"
+    )
+endif()
+
+
 # Finished setup!
